Add --illegal-access=permit to Kotlin compiler daemon on JDK16
See https://youtrack.jetbrains.com/issue/KT-44266#focus=Comments-27-4639508.0-0